<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.poviolabs.poviotestproject.models.Flower" />

        <import type="java.util.List" />

        <import type="com.poviolabs.poviotestproject.models.Status" />

        <import type="com.poviolabs.poviotestproject.models.Resource" />

        <variable
            name="resultCount"
            type="int" />

        <variable
            name="query"
            type="String" />

        <variable
            name="searchResource"
            type="Resource" />

        <variable
            name="callback"
            type="com.poviolabs.poviotestproject.ui.search.RetryCallback" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll"
                app:theme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ubuntu"
                    android:text="@string/flowrspot"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.Toolbar>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="315dp"
                app:layout_scrollFlags="scroll">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/search_background_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pl_hero"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/discoverFlowersMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="58dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="58dp"
                    android:fontFamily="@font/ubuntu_l"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/discover_flowers_around_you"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/exploreSightingsMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:fontFamily="@font/ubuntu_l"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/explore_between_more_sightings"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/discoverFlowersMessage"
                    tools:text="@string/explore_between_more_sightings" />

                <EditText
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="29dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/round_corners_drawable"
                    android:drawableEnd="@drawable/ic_pl_icon_search"
                    android:fontFamily="@font/ubuntu_l"
                    android:hint="@string/looking_for_something_specific"
                    android:imeOptions="actionSearch"
                    android:inputType="textNoSuggestions"
                    android:lineSpacingExtra="4sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/colorGray"
                    android:textColorHint="@color/colorGray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exploreSightingsMessage"
                    tools:ignore="Autofill" />

            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/repo_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/flower_item" />

                <TextView
                    android:id="@+id/no_results_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/empty_search_result(query)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibleGone="@{searchResource.status == Status.SUCCESS &amp;&amp; resultCount == 0}"
                    tools:layout_editor_absoluteY="247dp" />

                <include
                    layout="@layout/loading_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:callback="@{() -> callback.retry()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:resource="@{searchResource}" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>